
package model;

public class Documental extends Contenido {
    public Documental(String titulo, int anio, String director) {
        super(titulo, anio, director);
    }
}
