
package model;

public class Pelicula extends Contenido {
    public Pelicula(String titulo, int anio, String director) {
        super(titulo, anio, director);
    }
}
