
package model;

public class Serie extends Contenido {
    public Serie(String titulo, int anio, String director) {
        super(titulo, anio, director);
    }
}
